# bioplanner

./: README.md  environment.yml  pyproject.toml
bioprot/: 10051.json  1007.json  10157.json  10176.json  10238.json  10256.json  10279.json  10606.json  10614.json  10626.json  10650.json  10703.json  1073.json  10779.json  10832.json  10880.json  10903.json  10904.json  10906.json  10907.json  10908.json  10909.json  10920.json  10921.json  10936.json  1094.json  10945.json  10946.json  1095.json  10957.json  10959.json  10962.json  10980.json  10985.json  10999.json  11001.json  11015.json  11035.json  11061.json  11064.json  (+60 more)
prompts/: function_assignment.py  function_selection.py  protocol_generation.py  protocol_to_code.py
src/: evaluate_metrics.py  run_evaluate.py
src/to_evaluate/: 1.json
