[tool.poetry]
name = "bioplanner"
version = "0.1.0"
description = "Data from BioPlanner: Automatic Evaluation of LLMs on Protocol Planning in Biology paper"
authors = ["The BioPlanner team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bioplanner/bioplanner"
repository = "https://github.com/bioplanner/bioplanner"



[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.24.0"
torch = "^2.0.0"
nltk = "^3.8.1"
transformers = "^4.34.0"


[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
labgpt = ".__main__:main"

[tool.coverage.paths]
source = ["python", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["python", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"